--- a/tugas_kelompok/pubspec.yaml
+++ b/tugas_kelompok/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   flutter_icons: ^1.1.0
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  provider: ^6.0.1
+  url_launcher: ^6.0.12
+  flutter_html: ^2.1.5
 
 dev_dependencies:
   flutter_test:
